refactor: refactor components

--- a/example/miniprogram/app.less
+++ b/example/miniprogram/app.less
@@ -1,1 +1,8 @@
-@import 'miniprogram_npm/kite-weapp/common/style/dark.wxss';
+@import 'miniprogram_npm/kite-weapp/shared/style/themes/light.wxss';
+@import 'miniprogram_npm/kite-weapp/shared/style/themes/dark.wxss';
+
+page {
+  font-family: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+    'Noto Color Emoji';
+  background-color: var(--k-page-bg-color);
+}
