--- a/example/miniprogram/components/demo-block/demo-block.less
+++ b/example/miniprogram/components/demo-block/demo-block.less
@@ -1,8 +1,8 @@
 .demo-block {
-  padding-inline: var(--spacer-m, 16px);
+  padding-inline: 16px;
 
   &__title {
-    margin-block: var(--spacer-xs, 16px);
-    font-size: var(--font-size-s, 14px);
+    margin-block: 16px;
+    font-size: 14px;
   }
 }
