--- a/src/button/button.wxml
+++ b/src/button/button.wxml
@@ -1,11 +1,11 @@
-<wxs src="../wxs/utils.wxs" module="utils" />
+<wxs src="../shared/wxs/utils.wxs" module="utils" />
 
 <button
   id="{{ kId }}"
   style="{{ style }}"
-  class="{{ utils.bem('k-button', [color, size, variant, shape, expand, { disabled }]) }} k-class"
+  class="{{ utils.bem('k-button', [type, size, variant, shape, expand, { disabled }]) }} k-class"
   hover-class="{{ disabled || loading ? '' : 'k-button--active hover-class' }}"
-  form-type="{{ disabled || loading ? '' : type }}"
+  form-type="{{ disabled || loading ? '' : formType }}"
   open-type="{{ disabled || loading ? '' : openType }}"
   hover-stop-propagation="{{ hoverStopPropagation }}"
   hover-start-time="{{ hoverStartTime }}"
@@ -28,9 +28,12 @@
   bind:chooseavatar="chooseavatar"
   bind:agreeprivacyauthorization="agreeprivacyauthorization"
 >
-  <k-loading wx:if="{{ loading }}" size="sm" color="current" />
-
-  <k-icon wx:elif="{{ icon }}" name="{{ icon }}" k-class="k-button__icon" />
-
+  <k-loading
+    wx:if="{{ loading }}"
+    style="color: currentColor"
+    k-class="k-loading-class"
+    k-spinner-class="k-button__loading"
+  />
+  <k-icon wx:elif="{{ icon }}" name="{{ icon }}" k-class="k-button__icon k-icon-class" />
   <slot />
 </button>
