--- a/src/cell-group/cell-group.less
+++ b/src/cell-group/cell-group.less
@@ -1,13 +1,13 @@
-@import '../common/style/variables.less';
+@import '../shared/style/variables.less';
 
-@cell-group-card-margin-inline: var(--cell-group-card-margin-inline, 16px);
-@cell-group-card-border-radius: var(--cell-group-card-border-radius, @radius-m);
+@cell-group-card-margin-inline: var(--k-cell-group-card-margin-inline, 16px);
+@cell-group-card-border-radius: var(--k-cell-group-card-border-radius, @radius-m);
 
-@cell-group-title-padding-inline: var(--cell-group-title-padding-inline, 16px);
-@cell-group-title-padding-block: var(--cell-group-title-padding-block, 16px);
-@cell-group-title-line-height: var(--cell-group-title-line-height, 16px);
-@cell-group-title-font-size: var(--cell-group-title-font-size, @font-size-s);
-@cell-group-title-color: var(--cell-group-title-color, @text-secondary-color);
+@cell-group-title-padding-block: var(--k-cell-group-title-padding-block, 16px);
+@cell-group-title-padding-inline: var(--k-cell-group-title-padding-inline, 16px);
+@cell-group-title-line-height: var(--k-cell-group-title-line-height, 16px);
+@cell-group-title-font-size: var(--k-cell-group-title-font-size, @font-size-s);
+@cell-group-title-color: var(--k-cell-group-title-color, @text-color-placeholder);
 
 @cell-group: ~'k-cell-group';
 
