--- a/src/icon/icon.less
+++ b/src/icon/icon.less
@@ -9,10 +9,13 @@
 .@{icon} {
   display: inline-block;
   font-family: 'k-icon';
-  font-size: inherit;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  text-transform: none;
   line-height: 1;
-  text-rendering: auto;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
   &--image {
     width: 1em;
