--- a/src/overlay/overlay.less
+++ b/src/overlay/overlay.less
@@ -1,6 +1,4 @@
-@import '../common/style/variables.less';
-
-@overlay-background-color: var(--overlay-background-color, rgba(0, 0, 0, 0.6));
+@import '../shared/style/variables.less';
 
 @overlay: ~'k-overlay';
 
@@ -10,7 +8,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: @overlay-background-color;
+  background-color: @overlay-bg-color;
 }
 
 .k-fade-enter-active,
