--- a/src/row/row.less
+++ b/src/row/row.less
@@ -4,6 +4,7 @@
   display: flex;
   flex-flow: row wrap;
   box-sizing: border-box;
+  min-width: 0;
 
   &--start {
     justify-content: flex-start;
