--- a/src/row/row.wxml
+++ b/src/row/row.wxml
@@ -1,4 +1,4 @@
-<wxs src="../wxs/utils.wxs" module="utils" />
+<wxs src="../shared/wxs/utils.wxs" module="utils" />
 <wxs src="./row.wxs" module="computed" />
 
 <view
