--- a/src/shared/wxs/object.wxs
+++ b/src/shared/wxs/object.wxs
@@ -1,8 +1,6 @@
-var REGEXP = getRegExp('{|}|"', 'g');
-
 function keys(value) {
   return JSON.stringify(value)
-    .replace(REGEXP, '')
+    .replace(getRegExp('{|}|"', 'g'), '')
     .split(',')
     .map(function (item) {
       return item.split(':')[0];
