--- a/src/action-sheet/action-sheet.less
+++ b/src/action-sheet/action-sheet.less
@@ -1,14 +1,22 @@
-@import '../common/style/variables.less';
+@import '../shared/style/variables.less';
 
-@action-sheet-border-radius: var(--action-sheet-border-radius, @radius-l);
-@action-sheet-spacer: var(--action-sheet-spacer, 8px);
-@action-sheet-background-color: var(--action-sheet-background-color, rgba(255, 255, 255, 1));
+@action-sheet-spacer: var(--k-action-sheet-spacer, 8px);
+@action-sheet-border-radius: var(--k-action-sheet-border-radius, @radius-l);
 
-@action-sheet-header-padding-inline: var(--action-sheet-header-padding-inline, 12px);
-@action-sheet-header-padding-block: var(--action-sheet-header-padding-inline, 12px);
+@action-sheet-header-padding-block: var(--k-action-sheet-header-padding-block, 12px);
+@action-sheet-header-padding-inline: var(--k-action-sheet-header-padding-inline, 12px);
 
-@action-sheet-title-font-size: var(--action-sheet-title-font-size, @font-size-s);
-@action-sheet-title-color: var(--action-sheet-title-color, @text-secondary-color);
+@action-sheet-title-font-size: var(--k-action-sheet-title-font-size, @font-size-s);
+@action-sheet-title-line-height: var(--k-action-sheet-title-line-height, @line-height-s);
+@action-sheet-title-color: var(--k-action-sheet-title-color, @text-color-placeholder);
+
+@action-sheet-item-padding-inline: var(--k-action-sheet-item-padding-inline, 20px);
+@action-sheet-item-height: var(--k-action-sheet-item-height, 50px);
+@action-sheet-item-font-size: var(--k-action-sheet-item-font-size, @font-size-l);
+@action-sheet-item-color: var(--k-action-sheet-item-color, @text-color);
+@action-sheet-item-bg-color: var(--k-action-sheet-item-bg-color, @component-bg-color);
+@action-sheet-item-bg-color-active: var(--k-action-sheet-item-bg-color-active, @component-bg-color-active);
+@action-sheet-item-disabled-opacity: var(--k-action-sheet-item-disabled-opacity, 0.5);
 
 @action-sheet: ~'k-action-sheet';
 
@@ -22,24 +30,62 @@
     gap: @action-sheet-spacer;
   }
 
-  &-group {
-    border-radius: @action-sheet-border-radius;
-    background-color: @action-sheet-background-color;
-    overflow: hidden;
-  }
-
   &-header {
     display: flex;
     flex-direction: column;
     gap: @spacer-xs;
-    box-sizing: border-box;
-    padding: @action-sheet-header-padding-inline @action-sheet-header-padding-block;
-    text-align: center;
-    font-size: @action-sheet-title-font-size;
-    color: @action-sheet-title-color;
+    padding: @action-sheet-header-padding-block @action-sheet-header-padding-inline;
+
+    &:empty {
+      display: none;
+    }
   }
 
   &__title {
+    line-height: @action-sheet-title-line-height;
+    font-size: @action-sheet-title-font-size;
     font-weight: @font-weight-bold;
+    text-align: center;
+    color: @action-sheet-title-color;
+  }
+
+  &-group {
+    border-radius: @action-sheet-border-radius;
+    overflow: hidden;
+    background-color: @action-sheet-item-bg-color;
+  }
+
+  &__item,
+  &__cancel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: @spacer-xs;
+    box-sizing: border-box;
+    white-space: nowrap;
+    outline: none;
+    margin: 0;
+    border-radius: 0;
+    padding: 0 @action-sheet-item-padding-inline;
+    height: @action-sheet-item-height;
+    font-size: @action-sheet-item-font-size;
+    color: @action-sheet-item-color;
+    background-color: transparent;
+
+    &::after {
+      display: none;
+    }
+
+    &--disabled {
+      opacity: @action-sheet-item-disabled-opacity;
+    }
+
+    &--active {
+      background-color: @action-sheet-item-bg-color-active;
+    }
+  }
+
+  &__item-icon {
+    font-size: 1.2em !important;
   }
 }
