--- a/src/cell-group/cell-group.wxml
+++ b/src/cell-group/cell-group.wxml
@@ -1,8 +1,6 @@
-<wxs src="../wxs/utils.wxs" module="utils" />
+<wxs src="../shared/wxs/utils.wxs" module="utils" />
 
-<view wx:if="{{ title }}" class="{{ utils.bem('k-cell-group__title', [variant]) }} title-class">
-  {{ title }}
-</view>
+<view wx:if="{{ title }}" class="{{ utils.bem('k-cell-group__title', [variant]) }} k-title-class"> {{ title }} </view>
 
 <view id="{{ kId }}" style="{{ style }}" class="{{ utils.bem('k-cell-group', [variant]) }} k-class">
   <slot />
