--- a/src/cell/demo/cell.wxml
+++ b/src/cell/demo/cell.wxml
@@ -1,19 +1,23 @@
 <k-flex style="padding-bottom: 16px; width: 100%" gap="md" vertical>
   <demo-block title="基础用法">
-    <k-cell title="单元格" value="内容" required />
-    <k-cell title="单元格" value="内容" label="描述信息" border="{{ false }}" />
+    <k-cell-group>
+      <k-cell title="单元格" value="内容" />
+      <k-cell title="单元格" value="内容" label="描述信息" border="{{ false }}" />
+    </k-cell-group>
   </demo-block>
 
   <demo-block title="卡片风格">
-    <k-cell-group title="分组1" variant="card">
+    <k-cell-group variant="card">
       <k-cell title="单元格" value="内容" />
       <k-cell title="单元格" value="内容" label="描述信息" border="{{ false }}" />
     </k-cell-group>
   </demo-block>
 
   <demo-block title="单元格大小">
-    <k-cell title="单元格" value="内容" size="large" />
-    <k-cell title="单元格" value="内容" label="描述信息" size="large" border="{{ false }}" />
+    <k-cell-group>
+      <k-cell title="单元格" value="内容" size="large" />
+      <k-cell title="单元格" value="内容" label="描述信息" size="large" border="{{ false }}" />
+    </k-cell-group>
   </demo-block>
 
   <demo-block title="展示图标">
@@ -21,12 +25,14 @@
   </demo-block>
 
   <demo-block title="展示箭头">
-    <k-cell title="单元格" arrow clickable />
-    <k-cell title="单元格" value="内容" arrow clickable border="{{ false }}" />
+    <k-cell-group>
+      <k-cell title="单元格" arrow clickable />
+      <k-cell title="单元格" value="内容" border="{{ false }}" arrow clickable />
+    </k-cell-group>
   </demo-block>
 
   <demo-block title="页面导航">
-    <k-cell title="路由跳转" url="/pages/index/index" arrow clickable border="{{ false }}" />
+    <k-cell title="路由跳转" url="/pages/index/index" border="{{ false }}" arrow clickable />
   </demo-block>
 
   <demo-block title="分组标题">
