--- a/src/col/demo/col.less
+++ b/src/col/demo/col.less
@@ -6,13 +6,13 @@
   font-size: 14px;
   line-height: 30px;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
   background-clip: content-box;
-  background-color: #006fee;
+  background-color: #0072f5;
 }
 
 .k-col:nth-child(2n + 1) {
-  background-color: #006feebf;
+  background-color: #0072f5bf;
 }
 
 .layout {
