--- a/src/icon/demo/icon.wxml
+++ b/src/icon/demo/icon.wxml
@@ -8,15 +8,15 @@
 
   <demo-block title="图标颜色">
     <k-space>
-      <k-icon name="store" size="32px" color="#006fee" />
-      <k-icon name="fire" size="32px" color="#f31260" />
+      <k-icon name="store" size="32px" color="#298dff" />
+      <k-icon name="fire" size="32px" color="#f64784" />
     </k-space>
   </demo-block>
 
   <demo-block title="图标大小">
     <k-space>
       <k-icon name="location" size="32px" />
-      <k-icon name="location" size="48px" />
+      <k-icon name="location" size="40px" />
     </k-space>
   </demo-block>
 
