--- a/src/icon/icon.wxs
+++ b/src/icon/icon.wxs
@@ -1,4 +1,4 @@
-var utils = require('../wxs/utils.wxs');
+var utils = require('../shared/wxs/utils.wxs');
 
 function isImage(name) {
   return name.indexOf('/') !== -1;
