--- a/src/space/demo/space.wxml
+++ b/src/space/demo/space.wxml
@@ -1,32 +1,32 @@
 <k-flex style="padding-bottom: 16px" gap="md" vertical>
   <demo-block title="基本用法">
     <k-space>
-      <k-button>Default</k-button>
-      <k-button color="primary">Primary</k-button>
-      <k-button color="success">Success</k-button>
+      <k-button type="primary">Primary</k-button>
+      <k-button type="secondary">Secondary</k-button>
+      <k-button type="success">Success</k-button>
     </k-space>
   </demo-block>
 
   <demo-block title="垂直间距">
-    <k-space style="display: flex" vertical>
-      <k-button expand="block">Default</k-button>
-      <k-button color="primary" expand="block">Primary</k-button>
-      <k-button color="success" expand="block">Success</k-button>
+    <k-space style="display: flex" vertical align="start">
+      <k-button type="primary">Primary</k-button>
+      <k-button type="secondary">Secondary</k-button>
+      <k-button type="success">Success</k-button>
     </k-space>
   </demo-block>
 
   <demo-block title="间距大小">
-    <k-space size="md">
-      <k-button>Default</k-button>
-      <k-button color="primary">Primary</k-button>
-      <k-button color="success">Success</k-button>
+    <k-space size="middle">
+      <k-button type="primary">Primary</k-button>
+      <k-button type="secondary">Secondary</k-button>
+      <k-button type="success">Success</k-button>
     </k-space>
   </demo-block>
 
   <demo-block title="对齐">
     <k-space align="center">
       <text>center</text>
-      <k-button color="primary" size="lg">Primary</k-button>
+      <k-button type="primary" size="lg">Primary</k-button>
       <view style="padding: 20px 10px 30px; background-color: #d4d4d8">Block</view>
     </k-space>
   </demo-block>
@@ -34,10 +34,11 @@
   <demo-block title="自动换行">
     <k-space wrap>
       <k-button>Default</k-button>
-      <k-button color="primary">Primary</k-button>
-      <k-button color="success">Success</k-button>
-      <k-button color="warning">Warning</k-button>
-      <k-button color="danger">Danger</k-button>
+      <k-button type="primary">Primary</k-button>
+      <k-button type="secondary">Secondary</k-button>
+      <k-button type="success">Success</k-button>
+      <k-button type="warning">Warning</k-button>
+      <k-button type="danger">Danger</k-button>
     </k-space>
   </demo-block>
 </k-flex>
